# PhysicallyBasedRenderer

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  CubesWithSkybox.cpp  ObjectLoading.cpp  PhysicallyRenderedSphere.cpp  PhysicallyRenderedSpheres.cpp  main.cpp
example/programs/: CubesWithSkybox.cpp  DifferentMaterialBunnies.cpp  ObjectLoading.cpp  PhysicallyRenderedSpheres.cpp  SpheresDifferentBRDFs.cpp
example/resources/models/: SmoothSuzanne.mtl  VerySmoothSuzanne.mtl  sphere-highpoly.mtl  viking_room.mtl
include/PBR/: PBR.h  core.h  debug.h  phong.h  physically_based.h  scene_objects.h  skybox.h
include/PBR/core/: Camera.h  DirectedLightSource.h  ErrorCodes.h  PointLightSource.h  Renderer.h  RendererDriver.h  Scene.h  SceneObject.h  ShaderProgram.h  Skybox.h  Texture.h  TexturePrecomputation.h  VertexData.h  Window.h
include/PBR/debug/: DebuggingUtil.h
include/PBR/phong/: PhongMaterial.h  PhongRenderer.h  PhongScene.h  PhongSceneObject.h  PhongShaderUniforms.h  Skybox.h  SkyboxRenderer.h
include/PBR/physically_based/: BRDFCoefficients.h  EnvironmentMap.h  EnvironmentMapRenderer.h  FresnelValues.h  PBRUtil.h  PhysicallyBasedMaterial.h  PhysicallyBasedRenderer.h  PhysicallyBasedScene.h  PhysicallyBasedSceneObject.h  PhysicallyBasedShaderUniforms.h  Util.h
include/PBR/scene_objects/: Cube.h  CustomObject.h  Plane.h  Shapes.h
include/PBR/skybox/: Skybox.h  SkyboxRenderer.h
include/core/: Camera.h  Material.h  Renderer.h  RendererDriver.h  Scene.h  SceneObject.h  ShaderProgram.h  Window.h
include/example/: ExampleSceneBuilder.h
include/phong/: PhongRenderer.h  PhongScene.h  PhongSceneObject.h
include/scene_objects/: Plane.h
shaders/fragment/: test.frag
shaders/vertex/: test.vert
src/: CMakeLists.txt  Camera.cpp  Camera.h  SceneObject.cpp  SceneObject.h  Shader.cpp  ShaderProgram.cpp  ShaderProgram.h  Window.cpp  Window.h  main.cpp  renderer
src/core/: Camera.cpp  Camera.h  DirectedLightSource.cpp  ErrorCodes.cpp  LightSource.cpp  LightSource.h  Material.cpp  PointLightSource.cpp  PointLightSource.h  Renderer.cpp  Renderer.h  RendererDriver.cpp  RendererDriver.h  RendererWindow.cpp  RendererWindow.h  Scene.cpp  Scene.h  SceneObject.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Skybox.cpp  Texture.cpp  TexturePrecomputation.cpp  VertexData.cpp  Window.cpp  Window.h
src/debug/: DebuggingUtil.cpp
src/debug/shaders/: DisplayTexture.frag  DisplayTexture.vert
src/example/: ExamplePhongSceneBuilder.cpp  ExamplePhongSceneBuilder.h  ExampleSceneBuilder.cpp
src/phong/: BasicPhongScene.cpp  BasicPhongScene.h  PhongMaterial.cpp  PhongRenderer.cpp  PhongScene.cpp  PhongScene.h  PhongSceneObject.cpp  PhongSceneObject.h  PhongShaderUniforms.cpp  Skybox.cpp  SkyboxRenderer.cpp
src/phong/shaders/: phong_textured.frag  phong_textured.vert  phong_untextured.frag  phong_untextured.vert  skybox.vert
src/phong/shaders/fragment/: phong.frag
src/phong/shaders/vertex/: phong.vert  phong_textured.vert  phong_untextured.vert
src/physically_based/: BRDFCoefficients.cpp  EnvironmentMap.cpp  EnvironmentMapRenderer.cpp  FresnelValues.cpp  PBRUtil.cpp  PhysicallyBasedMaterial.cpp  PhysicallyBasedRenderer.cpp  PhysicallyBasedScene.cpp  PhysicallyBasedSceneObject.cpp  PhysicallyBasedShaderUniforms.cpp  Util.cpp
src/physically_based/shaders/: ComputeBRDFIntegrationMap.frag  ComputeIrradianceMap.frag  ComputePreFilteredEnvironmentMap.frag  PhysicallyBasedShader.frag  PhysicallyBasedShader.vert  PrepVerticesForRenderingTexture.vert  RenderHDRSkybox.frag  RenderHDRSkybox.vert  envmap_skybox.frag  envmap_skybox.vert  physically_based.frag  physically_based.vert  precompute_irradiance_map.frag  precompute_irradiance_map.vert
src/scene_objects/: Cube.cpp  CustomObject.cpp  Plane.cpp  Shapes.cpp
src/shaders/phong/: phong_textured.frag  phong_untextured.frag  phong_untextured.vert
src/skybox/: Skybox.cpp  SkyboxRenderer.cpp
src/skybox/shaders/: skybox.frag  skybox.vert
